RESOLVED FIXED235925
[Modules] ES module link errors should be reported unmuted from script elements
https://bugs.webkit.org/show_bug.cgi?id=235925
Summary [Modules] ES module link errors should be reported unmuted from script elements
Asumu Takikawa
Reported 2022-01-31 16:08:54 PST
Currently some WPT tests related to ES module link errors are failing (https://github.com/WebKit/WebKit/blob/4b4206d9a657984bcd1c01379a62de494afcaa69/LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-1-expected.txt) because the linking errors are muted (i.e., the error message is just "Script error.") and don't include the full error message/error value in the ErrorEvent. Since module scripts shouldn't have muted errors, these messages should get reported in full.
Attachments
Patch (13.62 KB, patch)
2022-01-31 18:05 PST, Asumu Takikawa
no flags
Patch (13.65 KB, patch)
2022-02-02 09:00 PST, Asumu Takikawa
no flags
Asumu Takikawa
Comment 1 2022-01-31 18:05:08 PST
Yusuke Suzuki
Comment 2 2022-02-01 23:58:24 PST
Comment on attachment 450488 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450488&action=review r=me > Source/WebCore/bindings/js/ScriptController.cpp:215 > + reportException(&lexicalGlobalObject, evaluationException, nullptr, /* fromModule */ true); I recommend using a boolean variable here to name it. constexpr bool fromModule = true; reportException(&lexicalGlobalObject, evaluationException, nullptr, fromModule);
Asumu Takikawa
Comment 3 2022-02-02 09:00:04 PST
EWS
Comment 4 2022-02-02 12:53:04 PST
Committed r288989 (246708@main): <https://commits.webkit.org/246708@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450653 [details].
Radar WebKit Bug Importer
Comment 5 2022-02-02 12:54:17 PST
Note You need to log in before you can comment on or make changes to this bug.