Unmute link errors for ES module scripts https://bugs.webkit.org/show_bug.cgi?id=235925

Patch by Asumu Takikawa <asumu@igalia.com> on 2022-02-02
Reviewed by Yusuke Suzuki.

LayoutTests/imported/w3c:

Adjust test expectations for error handling changes.

* web-platform-tests/html/semantics/scripting-1/the-script-element/module/choice-of-error-2-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/error-type-3-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-1-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-2-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-3-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-4-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-5-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-6-expected.txt:
* web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-7-expected.txt:

Source/WebCore:

* bindings/js/ScriptController.cpp:
(WebCore::ScriptController::linkAndEvaluateModuleScriptInWorld):


Canonical link: https://commits.webkit.org/246708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288989 268f45cc-cd09-0410-ab3c-d52691b4dbfc